--- a/html/css/style_new.css
+++ b/html/css/style_new.css
@@ -1,85 +1,47 @@
 body,html{ margin:0; height:100%; width:100%;}
 
 body{
-       padding:20px;
-       overflow:hidden;
     font-family:verdana;
     margin: 0 auto;
-    background-image: url(narcos_bg.jpg);
-    /*background-color: #9a9a9a;*/
-    background-position: center center;
-    background-repeat: no-repeat;
+    background:url(../imgs/bg.jpg) repeat center center; 
 }
 
-div.clear{ clear:both;}
+div.clear{ clear:both;} 
 .hidden{ display:none;}
 
+#main{ width:100%; padding:10px;  box-sizing: border-box;} 
 
-#switch { height:58px;width:48px;background:url(../imgs/off.png) no-repeat center center; }
-#switch.on{background:url(../imgs/on.png) no-repeat center center;}
-
-
-#input{ padding:10px; font-size:25px;  background-color:#fff; margin-top:30px; display:inline-block;}
-#input input{     font-size: 25px;
-    border: 1PX SOLID #CCC;
-    width: 72px; }
-#input input.btn{ width:108px;}
+#switch { margin-top:20px;border:3px solid #000; box-sizing: border-box; height:58px; width:100%; background-color:#3DE32D; text-align:center; line-height:58px; font-weight:bold; margin-top:20px; } /*background:url(../imgs/switch.png) no-repeat 0 0; */
+#switch.on{background-color:#f00;}
 
 
-#wires{
-    background-color:#fff;
-    display:inline-block;
-    
-    
-}
-h2{ margin-bottom:20px;} 
+#input{ border:3px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
+#input input{ 
+    font-size: 25px;
+    border: 1PX SOLID #000;
+    text-align:center;
+    width: 72px; 
+    }
+#input form{ margin:0 auto; width:350px;}
+#input input.btn{ width:60px;}
+
+
+
+
+
+h2{ text-align: center;margin-bottom:10px;} 
 h2 span{ display:block; text-align:center; font-size:11px;}
-#wires .wire{ width:250px; height:30px; background-color:#ccc; text-align:center; vertical-align:middle; line-height:30px; cursor:move;}
-#wires .wire:hover{background-color:#ddd;}
 
-
-h1#running{ font-size:30px; color:#f00;}
-/*
-#keypad{
-    position:relative;
-    margin:0 auto;
-    background-color:#aeb6b9;
-    width:730px;
+#wires{ border:3px solid #000; box-sizing: border-box; 
+    margin-top:20px;
+    background-color:#556B2F;
+    
 }
+#wires .wire{ width:100%;  height:30px; background-color:#556B2F; text-align:center; vertical-align:middle; line-height:30px; cursor:move; font-weight:bold;}
+#wires .wire:hover{background-color:#ddd; }
+#wires .btn{border:0; height:50px; width:100%; background-color:#3DE32D; text-align:center;  font-weight:bold; border-top:3px solid #000;  } 
 
 
+h1#running{ font-size:30px; color:#f00; width:100%; box-sizing: border-box; background-color:#0f0; height:200px; text-align:center;font-weight:bold; line-height:200px;}
 
-#keypad .k_button{
-display:inline-block;
-    height:133px;
-    width:173px;
-    border:0;
-   
-}
-
-.k_button.sp{ margin-left:20px;}
-
-#keypad #k1{ background: url(../imgs/kp/1.jpg) no-repeat center center;}
-#keypad #k2{ background: url(../imgs/kp/2.jpg) no-repeat center center;}
-#keypad #k3{ background: url(../imgs/kp/3.jpg) no-repeat center center;}
-#keypad #ka{ background: url(../imgs/kp/blank.jpg) no-repeat center center;}
-
-#keypad #k4{ background: url(../imgs/kp/4.jpg) no-repeat center center;}
-#keypad #k5{ background: url(../imgs/kp/5.jpg) no-repeat center center;}
-#keypad #k6{ background: url(../imgs/kp/6.jpg) no-repeat center center;}
-#keypad #kb{ background: url(../imgs/kp/blank.jpg) no-repeat center center;}
-
-#keypad #k7{ background: url(../imgs/kp/7.jpg) no-repeat center center;}
-#keypad #k8{ background: url(../imgs/kp/8.jpg) no-repeat center center;}
-#keypad #k9{ background: url(../imgs/kp/9.jpg) no-repeat center center;}
-#keypad #kc{ background: url(../imgs/kp/blank.jpg) no-repeat center center;}
-
-#keypad #kast{ background: url(../imgs/kp/blank.jpg) no-repeat center center;}
-#keypad #k0{ background: url(../imgs/kp/0.jpg) no-repeat center center;}
-#keypad #kcanc{ background: url(../imgs/kp/blank.jpg) no-repeat center center;}
-#keypad #kd{ background: url(../imgs/kp/blank.jpg) no-repeat center center;}
-*/
-
-pre{
-    color:#fff;
-}
+h1#title{ background-color:#556B2F; padding:3px; border:6px solid #000; font-size:30px; color:#000; width:100%; box-sizing: border-box; text-align:center;font-weight:bold; }
