--- a/html/css/style_new.css
+++ b/html/css/style_new.css
@@ -1,6 +1,6 @@
 body,html{ margin:0; height:100%; width:100%;}
 
-body{
+body{ 
     font-family:verdana;
     margin: 0 auto;
     background:url(../imgs/bg.jpg) repeat center center; 
@@ -15,7 +15,8 @@ div.clear{ clear:both;}
 #switch.on{background-color:#f00;}
 
 
-#input{ border:3px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
+#input { border:3px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
+#game_mode { border:3px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
 #input input{ 
     font-size: 25px;
     border: 1PX SOLID #000;
@@ -42,6 +43,6 @@ h2 span{ display:block; text-align:center; font-size:11px;}
 #wires .btn{border:0; height:50px; width:100%; background-color:#3DE32D; text-align:center;  font-weight:bold; border-top:3px solid #000;  } 
 
 
-h1#running{ font-size:30px; color:#f00; width:100%; box-sizing: border-box; background-color:#0f0; height:200px; text-align:center;font-weight:bold; line-height:200px;}
+h1#running{ margin-top:20px; font-size:30px; color:#f00; width:100%; box-sizing: border-box; background-color:#0f0; height:200px; text-align:center;font-weight:bold; line-height:200px;}
 
 h1#title{ background-color:#556B2F; padding:3px; border:6px solid #000; font-size:30px; color:#000; width:100%; box-sizing: border-box; text-align:center;font-weight:bold; }
