--- a/html/css/style_new.css
+++ b/html/css/style_new.css
@@ -1,6 +1,7 @@
 body,html{ margin:0; height:100%; width:100%;}
 
 body{ 
+overflow-x:hidden;
     font-family:verdana;
     margin: 0 auto;
     background:url(../imgs/bg.jpg) repeat center center; 
@@ -15,15 +16,16 @@ div.clear{ clear:both;}
 #switch.on{background-color:#f00;}
 
 
-#input { border:3px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
-#game_mode { border:3px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
+#input { border:3px solid #000; border-top:6px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
+#game_mode { border:3px solid #000; border-top:0; border-bottom:0; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box;}
 #input input{ 
     font-size: 25px;
     border: 1PX SOLID #000;
     text-align:center;
     width: 72px; 
     }
-#input form{ margin:0 auto; width:350px;}
+#input div{ margin:0 auto; width:246px;}
+#game_mode div{ margin:0 auto; width:386px;}
 #input input.btn{ width:60px;}
 
 
@@ -34,8 +36,8 @@ h2{ text-align: center;margin-bottom:10px;}
 h2 span{ display:block; text-align:center; font-size:11px;}
 
 #wires{ border:3px solid #000; box-sizing: border-box; 
-    margin-top:20px;
-    background-color:#556B2F;
+    
+    background-color:#556B2F; border-bottom:6px solid #000;
     
 }
 #wires .wire{ width:100%;  height:30px; background-color:#556B2F; text-align:center; vertical-align:middle; line-height:30px; cursor:move; font-weight:bold;}
