--- a/html/css/style_new.css
+++ b/html/css/style_new.css
@@ -12,12 +12,14 @@ div.clear{ clear:both;}
 
 #main{ width:100%; padding:10px;  box-sizing: border-box;} 
 
-#switch { margin-top:20px;border:3px solid #000; box-sizing: border-box; height:58px; width:100%; background-color:#3DE32D; text-align:center; line-height:58px; font-weight:bold; margin-top:20px; } /*background:url(../imgs/switch.png) no-repeat 0 0; */
+#poweroff { display:block;font-size: 50px; margin-top:20px;border:3px solid #000; box-sizing: border-box; height:58px; width:100%; background-color:#f00; text-align:center; line-height:58px; font-weight:bold;  } /*background:url(../imgs/switch.png) no-repeat 0 0; */
+#poweroff:link,#poweroff:visited{ text-decoration:none; color:#000; margin-top:100px;}
+#switch { font-size: 50px; margin-top:20px;border:3px solid #000; box-sizing: border-box; height:58px; width:100%; background-color:#3DE32D; text-align:center; line-height:58px; font-weight:bold;  } /*background:url(../imgs/switch.png) no-repeat 0 0; */
 #switch.on{background-color:#f00;}
 
 
-#input { border:3px solid #000; border-top:6px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
-#game_mode { border:3px solid #000; border-top:0; border-bottom:0; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box;}
+#input { border:3px solid #000; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box; margin-top:20px;}
+#game_mode {     text-align: center; border:3px solid #000; border-top:0; border-bottom:0; padding:10px; width:100%; font-size:25px;  background-color:#556B2F; box-sizing: border-box;}
 #input input{ 
     font-size: 25px;
     border: 1PX SOLID #000;
@@ -25,7 +27,7 @@ div.clear{ clear:both;}
     width: 72px; 
     }
 #input div{ margin:0 auto; width:246px;}
-#game_mode div{ margin:0 auto; width:386px;}
+
 #input input.btn{ width:60px;}
 
 
@@ -37,7 +39,7 @@ h2 span{ display:block; text-align:center; font-size:11px;}
 
 #wires{ border:3px solid #000; box-sizing: border-box; 
     
-    background-color:#556B2F; border-bottom:6px solid #000;
+    background-color:#556B2F; 
     
 }
 #wires .wire{ width:100%;  height:30px; background-color:#556B2F; text-align:center; vertical-align:middle; line-height:30px; cursor:move; font-weight:bold;}
